--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,54 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta http-equiv="Content-type" content="text/html;charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SQL webapp</title>
-	<link rel='stylesheet' href="'{{url_for('static',filename='bootstrap.min.css')}}">
-	<script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
-	<script src="{{url_for('static', filename='jquery-1.11.3.js')}}"></script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>OGG FTG SQL Query</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="{{url_for('static',filename='logo-nav.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='my.css')}}" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
-	<div class="container">
-		<nav class="navbar navbar-default">
-			<div class='container-fluid'>
-				<a class='navbar-brand' href="/">
-					SQL dev webapp
-				</a>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <img src="" alt="">
+                </a>
+
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li		    <li>
 				{% if not session.logged %}
 				<p class='navbar-text navbar-right login'>
 				<a href="/login">Login</a>
@@ -24,13 +58,28 @@
 				<a href="/logout">Logout</a>
 				</p>
 				{% endif %}
-				
-			</div>
+		    </li>
 
-		</nav>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-	</div>
+    <!-- Page Content -->
+    <div class="container">
+        {% block body %} {% endblock %}
+    </div>
+    <!-- /.container -->
 
+    <!-- jQuery -->
+	<script src="{{url_for('static', filename='jquery-1.11.3.js')}}"></script>
+    <!-- Bootstrap Core JavaScript -->
+	<script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
+	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </body>
-{% block body %} {% endblock %}
+
 </html>
+
+
